--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="max-w-5xl mx-auto text-center py-12 px-6">
       <h3 class="text-3xl font-semibold mb-6 text-white">Live Demo</h3>
       <div class="glass p-4 rounded-2xl shadow-2xl">
-        <iframe src="https://newgoogledrive.github.io/SqueakJS-embed-kit/squeakjs/run/index.html#image=../images/example.image" class="aspect-[4/3] w-[800px] max-w-full" allowfullscreen loading="lazy"></iframe>
+        <iframe src="https://newgoogledrive.github.io/SqueakJS-embed-kit/squeakjs/run/index.html#image=../images/example.image" class="w-full h-[70vh] md:h-[600px]" allowfullscreen loading="lazy"></iframe>
       </div>
       <p class="text-sm text-gray-400 mt-4">If the demo doesn’t load, <a href="https://newgoogledrive.github.io/SqueakJS-embed-kit/squeakjs/run/index.html#image=../images/example.image" target="_blank" rel="noopener" class="underline">open it in a new tab</a>.</p>
     </section>
