--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h1 class="text-2xl font-bold tracking-tight text-white">SqueakJS <span class="text-blue-300">Embed Kit</span></h1>
       <nav class="space-x-4">
         <a href="https://github.com/NewGoogleDrive/SqueakJS-embed-kit" class="hover:text-blue-100 transition">GitHub</a>
-        <a href="docs.html" class="hover:text-blue-100 transition">Documentation</a>
+        <a href="https://newgoogledrive.github.io/SqueakJS-embed-kit/" class="hover:text-blue-100 transition">Documentation</a>
       </nav>
     </div>
   </header>
